<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Dashboard-common</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <!-- DBPreferenceFragment -->
    <string name="pc_appearance">Оформление</string>
    <string name="pc_appearance_key">pc_appearance_key</string>
    <string name="etp_fragment_grand_base_height">Высота верхней панели (px)</string>
    <string name="etp_fragment_grand_base_height_key">etp_fragment_grand_base_height_key</string>

    <!-- Errors -->
    <string name="error_not_dir_for_work">Ошибка. Невозможно создать необходимые директории</string>
    <string name="error_menu_category_is_empty">В данной категории пока нет блюд.</string>
    <string name="error_retrieving_menu">Не удается загрузить меню из-за ошибки сети</string>
    <string name="error_placing_order">Невозможно отправить заказ\nПросим обратиться к сотруднику заведения</string>

    <!-- DBGrandFragment -->
    <string name="switch_off">рус</string>
    <string name="switch_on">eng</string>
    <string name="lock">БЛОК</string>
    <string name="lang_tag">RU</string>
    <!-- MediaFragment -->
    <string name="enter">Войти в меню</string>

    <!-- CafeFragment -->
    <string name="cafe_info_top"> Ленивое кафе Москва - это маленькая уютная частичка Москвы в шумной деловой Москве, очутившись в которой, понимаешь, что нет ничего дороже тепла, внимания и заботы. Москвичи знают толк в приготовлении вкусной и ароматной пищи, и мы постарались в наших салатах, пастах, ризотто и других различных средиземноморских блюдах передать всю гамму вкусовых ощущений. По достоинству оцените.</string>
    <string name="cafe_info_bottom">метро Киевская, «Европейский» ТРЦ
1 этаж, Атриум «Москва»,
навигационный № 177
тел.:+7 (495) 221-83-81, доб.6090</string>
    <string name="cafe">Кафе</string>

    <!-- GrandFragmentItem -->
    <string name="internet">Интернет</string>
    <string name="communication">Общение</string>
    <string name="carte_blanche">Карт \nбланш</string>
    <string name="call_waiter">Вызвать официанта</string>
    <string name="waiter_is_coming">Официант скоро подойдет</string>
    <string name="error_on_call_waiter">Невозможно вызвать официанта</string>
    <string name="delivery">Доставка</string>
    <string name="games">Игры</string>
    <string name="social_networks">Социальные сети</string>
    <string name="stock">Акции</string>
    <string name="about_cafe">О кафе</string>
    <string name="taxi">Вызов такси</string>
    <string name="guest">Гость</string>

    <!-- Menu -->
    <string name="menu">Меню</string>
    <string name="add_dish_hear">Добавляйте \nблюда сюда</string>
    <string name="order">Заказ</string>
    <string name="btn_call_waiter">Вызвать\nофицианта</string>
    <string name="btn_bring_bill">Принести\nсчет</string>
    <string name="total_to_pay">Итого</string>
    <string name="btn_order">Заказать</string>
    <string name="tv_price">Price</string>
    <string name="tv_count">0</string>
    <string name="in_total">ИТОГО</string>
    <string name="ingredients">Состав</string>
    <string name="tv_content">Мусс из сливочного сыра, темный и белый шоколад, шоколадный бисквит, стружки миндаля, карамель</string>
    <string name="tv_ingredients">Ингридиенты:</string>
    <string name="tv_order">Заказ</string>
    <string name="menu_not_loaded_message">Позовите официанта</string>

    <!-- MGContentFragment -->
    <string name="pressa">Пресса</string>
    <string name="quick_order">Быстрый заказ</string>
    <string name="clock">Часы</string>
    <string name="molle_map">Карта ТЦ</string>
    <string name="coffe">Просто кофе</string>

    <!-- TestClockPreferences -->
    <string name="timezone">TimeZone</string>
    <string name="unlock">Разблокировать экран</string>
    <string name="title_activity_dbinitialize_gallery_clock">DBInitializeGalleryClock</string>

    <string name="title_order_confirm">Отправить заказ?</string>

    <string name="message_wait">Пожалуйста, подождите…</string>
    <string name="message_order_confirm">Сумма вашего заказа составляет %s</string>
    <string name="message_order_success">Заказ отправлен. Ожидайте.</string>
    <string name="message_order_failure">Произошла ошибка во время отправки заказа.</string>

    <string name="btn_ok">OK</string>
    <string name="btn_cancel">Отмена</string>
    <string name="btn_send">Отправить</string>
    <string name="btn_add">Добавить</string>
    <string name="btn_change">Изменить</string>

    <string name="settings">Настройки</string>
    <string name="data_loading_status">%1$s из %2$s файлов</string>
    <string name="data_loading">Загрузка данных…</string>
    <string name="data_loading_error">Увы, произошла ошибка. Пожалуйста, пригласите к столу  администратора.</string>
    <string name="reload">Перезагрузить</string>
    <string name="hint_enter_password">Введите пароль</string>
    <string name="login">Войти</string>

    <string name="toast_max_product_count">В Счёт может быть добавлено не более %d позиций.</string>
    <string name="toast_max_product_unit_count">В Счёт может быть добавлено не более %d единиц одного продукта.</string>
    <string name="opens_system_settings">Открыть системные настройки</string>
    <string name="system_settings">Системные настройки</string>
	<string name="proceed">Продолжить</string>

    <string name="lbl_client_config">Соединение с сервером</string>
    <string name="lbl_client_id">Client ID</string>
    <string name="lbl_client_pass">Client password</string>
    <string name="lbl_api_url">API Server URL</string>
    <string name="lbl_web_url">Web Server URL</string>
    <string name="lbl_packet_size">Packet size</string>
    <string name="lbl_empty">Empty</string>
    <string name="wrong_password">Неправильный пароль</string>
    
    <string name="rotate_180">180°</string>
    <string name="clear_history">Удалить историю</string>
    
    <string name="closing_session_success">История удалена</string>
    <string name="closing_session_failure">Увы. Произошла ошибка</string>
    
    <string name="clear_order">Очистить заказ</string>
    <string name="remove_product_from_bill_text">удалить</string>
    
    <!-- settings -->
    <string name="settings_enable_install_apps_title">Разрешить установку приложений</string>
    <string name="settings_enable_demo_mode">Демо режим</string>
    <string name="settings_enable_install_apps_summary"></string>
    <string name="settings_enable_demo_mode_summary"></string>
    <string name="settings_error_dialog_title">Ошибка</string>
    <string name="caloricityUnit">ккал</string>
    
    <!-- map -->
    <string name="map_title">Карта ТРЦ Европейский</string>
    <string name="map_goods_categories">Категории товаров</string>
    <string name="map_floor">этаж</string>
    <string name="map_floors">этажи</string>
    <string name="_small_r">" р"</string>
    
    <string name="customNo">Нет</string>
	<string name="customYes">Да</string>
	
	<!-- Default table password for 1st app launch -->
	<string name="defaultTablePassword">password</string>


    <!-- Localization -->
    <string name="dashboard_resources">DASHBOARD</string>

	<!-- Chat -->

    <string name="now_in_chat">Сейчас в чате</string>
    <string name="editing">Редактирование</string>
    <string name="chat_sign_in">Вход</string>
    <string name="btn_write_message">Отправить сообщение</string>
    <string name="btn_make_gift">Сделать подарок</string>
    <string name="btn_ban_chat">заблокировать</string>
    <string name="btn_edit">ред.</string>
    <string name="panel_lbl">Общение</string>
    
    <string name="hint_message">Сообщение</string>
    <string name="message_sended">Сообщение отправлено</string>
    
    <string name="hint_nick_name">Никнейм</string>
    <string name="hint_status">Статус</string>
    <string name="btn_enter">Войти</string>
    <string name="me">Я</string>
    <string name="public_chat_user">Общий чат</string>
    <string name="btn_save_and_continue">Сохранить</string>
    
    <string name="just_now">Только что</string>
    <string name="ago">назад</string>
    <string name="hour0">часов</string>
    <string name="hour1">час</string>
    <string name="hour2">часа</string>
    <string name="minute0">минут</string>
    <string name="minute1">минуту</string>
    <string name="minute2">минуты</string>

</resources>
