<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:key="server"
        android:title="@string/settings" >
        <Preference
            android:key="pref_system_settings"
            android:singleLine="true"
            android:summary="@string/opens_system_settings"
            android:title="@string/system_settings" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_enable_install_apps"
            android:summary="@string/settings_enable_install_apps_summary"
            android:title="@string/settings_enable_install_apps_title" />
        
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_enable_demo_mode"
            android:summary="@string/settings_enable_demo_mode_summary"
            android:title="@string/settings_enable_demo_mode" />
    </PreferenceCategory>

</PreferenceScreen>